major updates to each of scene

--- a/index.html
+++ b/index.html
@@ -18,6 +18,10 @@
         .next {
             background-color: #4CAF50;
             color: white;
+		}
+		.previous {
+            background-color: #4CAF50;
+            color: white;
         }
     </style>
     <body style="font-family:'Times New Roman', Times, serif;">
@@ -40,7 +44,6 @@
             </ul>
             </p>
         </p>
-        <br><br><br>
         <p>
             <p>
 			In professional sports, a salary cap is an agreement or rule that places a limit on the amount of money that a team can spend on players salaries. 
@@ -49,7 +52,6 @@
 			
             </p>
         </p>
-        <br><br><br>		
         <p>
 			
             This project attempts to study this salary comparison between the teams, and observing if they contribute to higher wins or not. 
@@ -59,8 +61,9 @@
                 <li>Number of Win relation with respect to Tean Salary</li>
                 <li>Player rating relation to individual salary</li>
             </ul>
-            <br>Click Next to look at Team Salary of each team.
-            <a href="https://vkk2.github.io/cs498_proj/salarybyteam.html" class="next">Next &raquo;</a><br><br>
+            <br>Click Next to look at Team Salary of each team.<br><br>
+            <a href="https://vkk2.github.io/cs498_proj/salarybyteam.html" class="next">Next &raquo;</a><br>
+	
         </p>
         
     
