--- a/ratingvssalary.html
+++ b/ratingvssalary.html
@@ -30,9 +30,12 @@ text {
   font-size: 1.8em;
   fill: #8E8883;
 }
-
+.legend {
+  font-size: .8em;
+  fill: #8E8883;
+}
 .title {
-  font-size: 2em;
+  font-size: 1.4em;
   fill: #635F5D;
 }
 
@@ -47,12 +50,47 @@ text {
     font-weight: bold;
     color: black;
 }
+            .tooltip {
+                position: absolute;			
+                text-align: left;			
+                width: 170px;					
+                height: 50px;					
+                padding: 2px;				
+                font: 12px sans-serif;		
+                background: rgb(220, 228, 223);	
+                border: 1px;		
+                border-radius: 8px;			
+                pointer-events: none;	
+            }
 
+      .previous {
+          background-color: #f1f1f1;
+          color: black;
+      }
+
+      .next {
+          background-color: #4CAF50;
+          color: white;
+      }
+      a {
+          text-decoration: none;
+          display: inline-block;
+          padding: 8px 16px;
+      }
+
+      a:hover {
+          background-color: #ddd;
+          color: black;
+      }
 </style>
     <script src='https://d3js.org/d3.v5.min.js'></script>
   </head>
   <body>
-    <svg width="1050" height="800"></svg>
+          <p style="font-size: 16px">
+		<b><i>Use the legend to select team you want</i></b><br>
+		<b><i>Use the mouseover to get more detail</i></b>
+        </p>
+    <svg width="1050" height="700"></svg>
     <script>
 
 
@@ -63,9 +101,9 @@ const height = +svg.attr('height');
 
 
 const render = data => {
-  const title = 'Player Win Share Metric vs Salary';
+  const title = 'Player Win Share Rating vs Salary';
   
-  //const dValue = d => d.team;
+
   const xValue = d => d.SALARY;
   const xAxisLabel = 'Salary in $';
   
@@ -73,7 +111,7 @@ const render = data => {
   const circleRadius = 10;
   const yAxisLabel = 'Win Share';
   
-  const margin = { top: 60, right: 100, bottom: 200, left: 200 };
+  const margin = { top: 50, right: 100, bottom: 100, left: 120 };
   const innerWidth = width - margin.left - margin.right;
   const innerHeight = height - margin.top - margin.bottom;
 const color = d3.scaleOrdinal().range(["#ffd700", "#0ba0e3", "#ff9bdc", "#4b0082","#0000ff",
@@ -102,15 +140,14 @@ const color = d3.scaleOrdinal().range(["#ffd700", "#0ba0e3", "#ff9bdc", "#4b0082
     .tickSize(10)
 	.ticks(5)
 	.tickFormat(function(d) { return formatValue(d)});
-    //.tickPadding(15);
-	//.format("s");
+
   
   const yAxis = d3.axisLeft(yScale)
     .tickSize(10)
     .tickPadding(10);
   
   const yAxisG = g.append('g').call(yAxis);
-  //yAxisG.selectAll('.domain').remove();
+ 
   
   yAxisG.append('text')
       .attr('class', 'axis-label')
@@ -145,22 +182,22 @@ const color = d3.scaleOrdinal().range(["#ffd700", "#0ba0e3", "#ff9bdc", "#4b0082
       .attr('cy', d => yScale(yValue(d)))
       .attr('cx', d => xScale(xValue(d)))
       .attr('r', circleRadius)
-	  .style('fill', function(d){ return color(d.team); })
-	  //.on("mouseover", tipMouseover)
+	  .style('fill', function(d){ return color(d.TEAM); })
+
 	   .on("mouseover", function(d) {
 	    d3.select(this)
         .transition()
         .duration(100)
         .attr('r', 20)
         .attr('fill', '#ff0000');
-		return tooltip.style("visibility", "visible").html("<span style='color:red'> Player : " + d.player + "<br/>" + "Win Share Rating  : " + yValue(d) + "<br/>" + "Salary : " + xValue(d) + "<br /></span>")
-		                      .style("left",  (d3.event.pageX + 30) + "px")
+		return tooltip.style("visibility", "visible").html("<span> Player : " + d.player + "<br/>" + "Win Share Rating  : " + yValue(d) + "<br/>" + "Salary : " + xValue(d) + "<br /></span>")
+		                      .style("center",  (d3.event.pageX + 38) + "px")
                       .style("top", (d3.event.pageY - 28) + "px");}) 
 		
 		//text('Salary = ' + xValue(d) + ' Wins=' +yValue(d) + ' Player=' +d.player);})
 	
   
-  // we move tooltip during of "mousemove"
+  //  move tooltip for mousemove
   
   .on("mousemove", function() {
     return tooltip.style("top", (event.pageY - 30) + "px")
@@ -177,8 +214,7 @@ const color = d3.scaleOrdinal().range(["#ffd700", "#0ba0e3", "#ff9bdc", "#4b0082
     return tooltip.style("visibility", "hidden");
   })
   
-  //.on("mouseover", highlight)
-   //.on("mouseleave", doNotHighlight );
+
 
   g.append('text')
       .attr('class', 'title')
@@ -193,8 +229,7 @@ const color = d3.scaleOrdinal().range(["#ffd700", "#0ba0e3", "#ff9bdc", "#4b0082
                         .enter().append("g")
                         .attr("class", "legend")
                         .attr("transform", function(d, i) { return "translate(0," + i * 20 + ")"; });
-                // debugger;
-                    // draw legend colored rectangles
+
                     legend.append("rect")
                         .attr("x", width -18)
 						.attr("y", 58)
@@ -209,7 +244,7 @@ const color = d3.scaleOrdinal().range(["#ffd700", "#0ba0e3", "#ff9bdc", "#4b0082
 						if (clicked !== d){
 							d3.selectAll(".circle")
 								.filter(function(e){
-									return e.team !== d;
+									return e.TEAM !== d;
 								})
 							.style("opacity",0.1)
 							clicked = d
@@ -218,8 +253,7 @@ const color = d3.scaleOrdinal().range(["#ffd700", "#0ba0e3", "#ff9bdc", "#4b0082
 							clicked = ""
 						}
 						});
-                    // debugger;
-                    // draw legend text
+
                     legend.append("text")
                         .attr("x", width - 26)
                         .attr("y", 68)
@@ -234,7 +268,7 @@ d3.csv('https://raw.githubusercontent.com/vkk2/cs498_proj/master/2017-18_NBA_sal
     data.forEach(d => {
       d.SALARY = +d.Salary;
       d.WINS = +d.WS;
-	  d.team=d.Tm
+	  d.TEAM=d.Tm
 	  d.player=d.Player
 
     });
@@ -244,12 +278,14 @@ d3.csv('https://raw.githubusercontent.com/vkk2/cs498_proj/master/2017-18_NBA_sal
 	
 	        <p>
 			
-            GSW, OKC, WAS have the most salaries<br>
+            <b>Observations:</b> James Harden from Houston has the highest Win share rating and Houston is the only team with 3 players with rating of ~10 or more<br>
+			There are some over performers(are on a rookie contract) and some who have higher salary and performed poorly(possibly due to injury/skill).
             
-			<br>Click Next to see if these salaries results in wins.
-			<br>Click Previous to back to overiew
+
+			<br>Click Start Over if you want to start over.<br><br>
 			<a href="https://vkk2.github.io/cs498_proj/winvssalary.html" class="previous">&laquo; Previous</a>
-            <a href="https://vkk2.github.io/cs498_proj/index.html" class="next">Next &raquo;</a><br><br>
+			<a href="https://vkk2.github.io/cs498_proj/index.html" class="next"> Start Over&raquo; </a><br>
+
         </p>
   </body>
 </html>
