--- a/winvssalary.html
+++ b/winvssalary.html
@@ -73,7 +73,7 @@ text {
     <script src='https://d3js.org/d3.v5.min.js'></script>
   </head>
   <body>
-            <p style="font-size: 16px">
+            <p style="font-size: 16px;color:#FF0000">
 		<b><i>Use the mouseover to get more detail</i></b>
         </p>
     <svg width="1050" height="700"></svg>
@@ -204,14 +204,14 @@ var color = d3.scaleOrdinal().range(["#ffd700", "#0ba0e3", "#ff9bdc", "#4b0082",
 	  .attr('x',innerWidth/2)
       .text(title);
 	  
- g.append('text')
-    .attr("fill", "black")
-    .attr("x", width * 0.1)
-    .attr("y", 50 )
-    .style("font-size", "1em")
-    .attr("width", 200)
-    .attr("height", 20)
-    .text("Higher Salary tends to lead to higher wins");
+ //g.append('text')
+  //  .attr("fill", "black")
+   // .attr("x", width * 0.1)
+   // .attr("y", 50 )
+    //.style("font-size", "1em")
+    //.attr("width", 200)
+    //.attr("height", 20)
+    //.text("Higher Salary tends to lead to higher wins");
 	
 
                 var legend = svg.selectAll(".legend")
