change to manual annotations

--- a/index.html
+++ b/index.html
@@ -19,47 +19,47 @@
             background-color: #4CAF50;
             color: white;
 		}
-		.previous {
-            background-color: #4CAF50;
-            color: white;
-        }
+.previous {
+    background-color: #4CAF50;
+    color: white;
+}
     </style>
     <body style="font-family:'Times New Roman', Times, serif;">
-        <h1 style="text-align:center">2017-2018 NBA Team Salary and Win Study</h1><br>
+<h1 style="text-align:center">2017-2018 NBA Team Salary and Win Study</h1><br>
 
         <p>
-            <img src="https://raw.githubusercontent.com/vkk2/cs498_proj/master/stephcurry_jamesharden.jpg" 
-            alt="NBA" style="width:40%;height:60%;margin-left:15px;float:right;" ><br>
+    <img src="https://raw.githubusercontent.com/vkk2/cs498_proj/master/stephcurry_jamesharden.jpg" 
+    alt="NBA" style="width:38%;height:62%;margin-left:15px;float:right;" ><br>
             <p>
-            The NBA is men's professional basketball league in North America, of 30 teams<br><br>
-			It is one of the four major professional sports leagues in the United States and Canada, and is widely considered to be the premier 
-			men's professional basketball league in the world.
+    The NBA is men's professional basketball league in North America, of 30 teams<br><br>
+		It is one of the four major professional sports leagues in the United States and Canada, and is widely considered to be the premier 
+			men's professional basketball league in the world.			    
+			Top Players in NBA include :            
 			
-            Top Players in NBA include :- 
-           
-            <ul>
-                <li>James Harden</li>
-                <li>Lebron James</li>
-                <li>Stephen Curry</li>
+<ul>
+        <li>James Harden</li>
+        <li>Lebron James</li>
+        <li>Stephen Curry</li>
             </ul>
             </p>
         </p>
         <p>
             <p>
-			In professional sports, a salary cap is an agreement or rule that places a limit on the amount of money that a team can spend on players salaries. 
+			<b> NBA Salary Cap: </b>In professional sports, a salary cap is an agreement or rule that places a limit on the amount of money that a team can spend on players salaries. 
 			It exists as a per player limit or a total limit for the team's roster, or both. Salary caps can be a big issue in negotiations between league 
-			management and players unions because they limit players and teams ability to negotiate higher salaries even if a team is operating at significant profits. 
+			management and players unions because they limit players and teams ability to negotiate higher salaries even if a team is operating at significant profits. More info<a href="https://en.wikipedia.org/wiki/NBA_salary_cap" title="Salary Cap Wikipedia">here</a><br>
 			
+			<b> Win Share Rating: </b> Is one of advanced analytics calculated for each player. This is an estimate of number of wins contributed by a player. More info <a href="https://www.basketball-reference.com/about/ws.html">here. </a><br>
             </p>
         </p>
         <p>
 			
             This project attempts to study this salary comparison between the teams, and observing if they contribute to higher wins or not. 
-			If they do, it drills down on how player rating influences these <br><br>Like:-
+			If they do, it drills down on how player rating influences this. <br><br>As you go through this, think of following questions:
             <ul>
-                <li>Salary by each team</li>
-                <li>Number of Win relation with respect to Tean Salary</li>
-                <li>Player rating relation to individual salary</li>
+                <li>Which teams have highest/lowest NBA salaries?</li>
+                <li>How highest/lowest NBA salaried teams rank in terms of wins?</li>
+                <li>The team that have the most, how did it's player contributed to these wins and their relation to salary? </li>
             </ul>
             <br>Click Next to look at Team Salary of each team.<br><br>
             <a href="https://vkk2.github.io/cs498_proj/salarybyteam.html" class="next">Next &raquo;</a><br>
